# docbook-index

./: Cargo.toml  crates-io.list  run-corpus.sh  shell.nix
corpus/contributing/: chap-contributing.html  contributing.xml  out.js  out.json
corpus/title-scope/: doc.xml  example.html  out.js  out.json
corpus/title-with-subtag/: doc.xml  example.html  out.js  out.json
src/: extract.rs  fileindex.rs  main.rs
